--- a/_config.yml
+++ b/_config.yml
@@ -178,13 +178,13 @@ collections:
   teaching:
     output: true
     permalink: /:collection/:path/
-  publications:
+  research:
     output: true
     permalink: /:collection/:path/
-  portfolio:
+  CV:
     output: true
     permalink: /:collection/:path/
-  talks:
+  references:
     output: true
     permalink: /:collection/:path/
 
