--- a/_config.yml
+++ b/_config.yml
@@ -85,8 +85,8 @@ author:
   bio              : "I am a Ph.D. Candidate in Economics at UQAM"
   location         : "Montréal"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  googlescholar    : #"http://yourfullgooglescholarurl.com"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
@@ -309,3 +309,4 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+googleanalytics:G-P2DQGB7FS1
