--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Komla Avoumatsodo"
   avatar           : "dythor.jpg"
-  bio              : "I am a Ph.D. Candidate in Economics at UQAM"
+  bio              : "Ph.D. Candidate in Economics"
   location         : "Montréal"
   employer         :
   pubmed           :  #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
