--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Komla Avoumatsodo"
-  avatar           : "dythor_oscar2.jpg"
+  avatar           : "dythor_oscar2.png"
   bio              : "Ph.D. Candidate in Economics"
   location         : "Montréal"
   employer         :
