--- a/_config.yml
+++ b/_config.yml
@@ -83,11 +83,11 @@ author:
   name             : "Komla Avoumatsodo"
   avatar           : "dythor_oscar2.png"
   bio              : "Ph.D. Candidate in Economics"
-  location         : "Montréal"
-  employer         :
+  location         : "Prince George"
+  employer         : " University of Northern British Columbia"
   pubmed           :  #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    :  "https://scholar.google.ca/citations?user=6mhGYPAAAAAJ&hl=en&oi=ao"
-  email            :
+  email            : "komla.avoumatsodo@unbc.ca"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
