--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "dythor_oscar2.png"
   bio              : "Ph.D. Candidate in Economics"
   location         : "Prince George"
-  employer         : " University of Northern British Columbia"
+  employer         : 
   pubmed           :  #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    :  "https://scholar.google.ca/citations?user=6mhGYPAAAAAJ&hl=en&oi=ao"
   email            : "komla.avoumatsodo@unbc.ca"
