--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Komla Avoumatsodo"
   avatar           : "dythor_oscar2.png"
-  bio              : "Ph.D. Candidate in Economics"
+  bio              : 
   location         : "Prince George"
   employer         : 
   pubmed           :  #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
