--- a/_config.yml
+++ b/_config.yml
@@ -242,9 +242,9 @@ defaults:
       type: references
     values:
       layout: single
-      author_profile: true
-      share: true
-      comment: true
+      author_profile: false
+      share: false
+      comment: false
 
 # Sass/SCSS
 sass:
