--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   pubmed           :  #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    :  "https://scholar.google.ca/citations?user=6mhGYPAAAAAJ&hl=en&oi=ao"
   email            : "komla.avoumatsodo@unbc.ca"
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  researchgate     :  "https://www.researchgate.net/profile/Komla-Avoumatodo"
   uri              :
   bitbucket        :
   codepen          :
