--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Home"
+title                    : "Komla Avoumatsodo"
 title_separator          : "-"
 name                     : &name "Komla Avoumatsodo"
 description              : &description "personal description"
-url                      : https://avoumatsodo.github.io  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://komlaavoumatsodo.github.io  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "avoumatsodo/avoumatsodo.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
