--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Komla Avoumatsodo"
 title_separator          : "-"
 name                     : &name "Komla Avoumatsodo"
 description              : &description "personal description"
-url                      : https://komlaavoumatsodo.github.io  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://avoumatsodo.github.io  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "avoumatsodo/komlaavoumatsodo.github.io"
+repository               : "avoumatsodo/avoumatsodo.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
