--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Komla Avoumatsodo"
+  name             : "Komla Avoumatsodo, Ph.D."
   avatar           : "dythor_oscar2.png"
   bio              : "Assistant Professor of Economics"
   location         : "Prince George"
