--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Komla A. | Home"
+title                    : "Komla Avoumatsodo | Homepage"
 title_separator          : "-"
 name                     : &name "Komla Avoumatsodo"
 description              : &description "personal description"
